syntax = "proto3";

package code_push;

service CodePush {
}